# rusty_jam

./: Cargo.toml  LICENSE  README.md
.hooks/: pre-commit.sh
assets/maps/: test.map
assets/shaders/: unlit_material.frag  unlit_material.vert
src/: camera.rs  main.rs  map.rs  material.rs
src/map/: loading.rs  mod.rs
