[package]
name = "rusty_jam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
# TODO(@justint): check windows compatibility
bevy_egui = "0.14" # bevy 0.7 compatible
bevy-inspector-egui = "0.11" # bevy 0.7 compatible

[dependencies.iyes_loopless]
git = "https://github.com/IyesGames/iyes_loopless"
branch = "main"
features = ["states"]