[package]
name = "rusty_jam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.7"
bevy_egui = "0.14" # bevy 0.7 compatible
bevy-inspector-egui = "0.11" # bevy 0.7 compatible
serde = { version = "1.0", features = ["derive"] } # for map asset loader
anyhow = "1.0.4" # for asset loader errors
serde_yaml = "0.8" # map asset file format

[dependencies.iyes_loopless]
git = "https://github.com/IyesGames/iyes_loopless"
branch = "main"
features = ["states"]